user-api/overlays/cnv-prod/khemenu.route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-khemenu-route53
spec:
    host: khemenu.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data:snPHTfg16u4f0e++hkso0NOF9rI4d79U+ot5clgj/ds+Ym0TAPp5BCMMpdAWjYedemJJJct4cZAuDCnSvLUlVcr2EzHpgeAU/4devU/f32p99AZRdTK+7zuXmuwCZSkrjufhnaSjWWtURnMM5WjnGqn42UUYOV/nxbl7Vhi0/CNMg0gHxXgMLisTkTgpFgswBDUJuNIqf96n8b5y7afoVlPIt/cyG4MyGA/ZyUT1XloMnOjkZviBdXNmWWezAkw+QP6jb2uV634dVeW37JJzRdr2fVxIF2cznZvUXqDhWUF0SZN6BTPoCIIMVnzlmBNE4oUcBaMU75RZUEw8GXi1g9IP2NT6JYTq4JN711sdpQwnKsC4JTsK5QtKVglQFF46QbwjC4/2H3KC/ekeCkgT+2vFH63B9wt4IDCdrJynIqSSEv2kZmyxFR/RrD64oBgWiAc9pNR3e [...]
        certificate: ENC[AES256_GCM,data:yIgt3DHp6/U/PcZTiXP9gCmWe08BhdS2l2bR3LrnQB+9a9kvjzXgCVVEBm416TIvnEA71Ktt+WHp4jnEjXjtgHOHHvOdJmoVAuQI7ReWNLd0hSpKVF7ZtifeqsDpR+Ak/e7LO4XA+f7qJRC4dwMQ1anTzR5jFArn03PMBpgQ2MvXVYdpbaNBJLSHMddFfRBow6JMmbInI1fqAJOPG1Mk9/tgD6A1xwAyYnylf5t43t6Tw4KdWH+U4JOlfz/8U6D3WgJpAbOA5CllhZSma87noNcyVlgOXrD4oYKtGOGkSRStASW0+2jU0jPMZ8LmHP4hlIuasQUhlPzbbd5TkhuoPIf6qyD//c7crFnEpTkY3uGuR6cxvBWQSpazFAgKDlY+qoICT3Wwk5JmCPU6Tkp3gLfAo1R/cD3zFclswi97pm3Ipu2A6A0AnvNQCCMSyjtjUikVAxSFn5R [...]
        key: ENC[AES256_GCM,data:y5jRNI2WW8VzgphxPBHFJ7sfcSpxazoG6Wdz/zuT2oNczIwoiFa1nqRFNV0LzGcIKFI4zvc1c6aVbONFyJwZbXgS3/ffdS00KtQdI/8HSJ9WkMrKjH69nO2lUd1hR+08fK3dN3tcW75QHM2rVM8ANeO/ggPxQEziKYZ0iPbnKPYJqSVFLgWy/efcXUFIh/YKFidHRNrCBUiCsWkMlvtoyWrt5omIENhPGqMR6vtOqpY/kaefn/Kufe7FCoS8K/9kbJOcbGXda6gZrU+Ma66X1jC9pBkEegs8qy4174eD5o1DtpUhf0OleJ3BassbdZr6Y+ILPl3GHPQX60o0GytrEJY+a7bo1uaZDHAanArqTCk4UbhIYm61PsCeB0KxZG7Vn9f8tuEsWe3lLDEethSO6CoHfNTBuMH38a2aMOuLiZcviG5/pYSM0lG/aQ//4bv5ohOH/rBL4lBpH6+cHnw [...]
        termination: ENC[AES256_GCM,data:FVUuMA==,iv:+01PhaX9+elGful/3BZAc1BWzM3FuCLsU4UgrdJkKVs=,tag:kWETURSJFiXDNUtAzU87gQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-03-19T00:19:55Z'
    mac: ENC[AES256_GCM,data:7dCq2X520gLiqe3BViWoIm1EiXsblJvf160OloAzx7xPW1aMewgjdJ3IjFDDL8sL9oMKZ7qMUY48Qjazrn7LVdknAzPZT1i9G1ERUNhwm3lKAacXT+GZryzO0RpFVn2VuKpIXgSBA7f/dH4iQ03BnlTCoLzBNNQ21AAi3fM/o+E=,iv:cHQszh5rdWYszBmld33snwcPMZBKIfzq0F3o31RJtzM=,tag:BeLXnt06P63bJ6ofnROwuQ==,type:str]
    pgp:
    -   created_at: '2021-03-19T00:19:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//Yt7CjWwUqtVEwlMG3uP2cWlRLs8CxXZrasPigKgYJVWK
[...]
            =U3pe
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-03-19T00:19:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/Xka4Z6H0lBHXyIKxUKDehory/AxiJnFRPDhiz7KUFFla
[...]
            TiuZTBglFze5F3r+U5Qvb2Z90KqBegJ992TjZn/sOA==
            =rasG
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-03-19T00:19:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf+NinRQTsWg0h9qXAN685FdCjd6Mu5j/N6ZQQllIbWq9f/
[...]
            F/UsgkHpkbxZ+kjy12LDgYyWlvCwPGO1L9/NrRDBCg==
            =Ynhr
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-03-19T00:19:54Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiARAAt2VB3ysJ09p/1eiaGuCqWpk51HW3bFWzM9U1J1xgADE0
[...]
            =7h1+
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
