user-api/overlays/cnv-prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: user-api-route53
spec:
    host: api.moc.thoth-station.ninja
    to:
        kind: Service
        name: user-api
    tls:
        caCertificate: ENC[AES256_GCM,data:H+1SRWyTeVYlJQBip38z7ECQgX4SDySyGnwPFidr7q4vVCZfzeKQ0HRa5wyH/AA4zlHvlb4+6y20rNFPwdyFGXKl/8Dl8thpaiFqBGC8FNvyS5IT9NatOLvdXv5Dz6aSG5DbkmeKwP4VOSj4RRGfbNb8x48GtvsnTVm9mh1Xz/11aSyTEGw+fgD/Me2gUf5FPCaQPdp7HYx0AX9W4TowidkvurYuNLMoIOWzTKX22aCIFkw41dGwyu+knSwgPvHq7zUedRPvvD2VV0uSjA4fSyTvoV+cFxBsRZQrgsc53pWJrkJ7jPzZizObHegxYa4d/34cTef4UBmWRzNsU4S1yo1loVv9GLpHMXaWC1+AoPnr1h4UZ4A/Ojke+9oEKorIEaAR4wXUjlky/7vT4uiodvUO1QMUkYiqKbAa0k2ydd1ZB3vfy1PlOblj5qm47rXemlHp8CHQL [...]
        certificate: ENC[AES256_GCM,data:TyUi5u+gfAO6v9Od4Sea222mt0umfzAlPgKDLakoaq+TW5R/ha0EUy8x8RhA96+bYq8ZD+mdB9JJ97XJtPPQbuoVsX7W+pt0PlzyCu+3/zF1u4ofSU69rSIRpK9BDqfVpheRneKWKAADHaBcYrzgmfvRITFqX2Bu7gKZrgW6ggTKrCv4A6FHmJARdnzf1MH09yrQyeRY3eyOd0oZgvXwffsKljmsfKrc4w9InmhbqNUsSqa+GBwxExUMLKf9zlVeAf1ieBdyHI9IGJqPa50ibocb6Q2tXYNQ2Hof84uKtVf9b+t8eB7w9uDALNGWd+9N5b97FzBnuyPCEnAKhEDxbUyQwHvVDbl7ZyihQEpwJMKRX6fohCSOBmzrMR3QXI5WFfAI/zY+rBC7/aGJJhO5pRhzF5dpIN1T+AVqzlAStZ0neotGnUDLhuygevzBlWF9bMyAOkNgcwO [...]
        key: ENC[AES256_GCM,data:DIj06nXQNEMfVysTrUtxfCKch++GiPBkDrayL0R50H/sM4Q4beFQih3F6ZARizZReHdEbvWTC7C0lpZk3xH+h4016EH6YUSn7fTErTOgzCwGMyDYudAT6/zRu2u99KUvJ0MManjLluUo4nwKQjDzJw3YyJbZbrF3lfBpqQdJSaOwFoNZxLBGUphiQ9oqixejvKSpuk0jz0u8T0GmPVtDlPrD7OEf8Kkij9Zf9WaWqoRBj9dnHYzWqna47jKNZ2rmo/d1wTnMBzyWE9wdXLon05eaRLbybeG69JYLDSSvb6J3bXhafaHyC0eGfZPOstOMnGCbDb5g5apv4bMeCjTZSA7KY8rGxKHxEcKfD6pIjqNUao48y4rE05VB89JJgOcuawLvq4BlvhGxzSO/gBhUZ3MSdT2KxJr417+CPHQhmE4QgRCOjMR/LmPATIdFl1xyKIwT/L4ONBwcvSGFpJu [...]
        termination: ENC[AES256_GCM,data:De9eGw==,iv:CnWuuWiLD1ENteL+ej+/7+0pQ9nXP6TmtosgLCmBjlY=,tag:TM6AYQDWpLETZ0v6/nSlrg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-12-13T17:59:06Z'
    mac: ENC[AES256_GCM,data:4+omot9oQnSoomLKo0o4s2RvnDB0WxXm2ada1pqcQ138lH/EXDJHWpp3L8kdxg/gEVIo2sahDWie2lSCQBo7ZN22EZzLzl1fVvze0b1dMN65iaxM8TRRnrJGeUWHrhDtZZcmaQJPzUMxyzW7K3ZUON4V6IUSdFUXMTZRBNrvnIs=,iv:ptmWllk69ysD4gmuV2U9knk1JiPQQwasyU/uHNWHvBk=,tag:HigipSrQuauTgdFb+lRWhQ==,type:str]
    pgp:
    -   created_at: '2020-12-13T17:59:05Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//d00AH8oPAVhkalpBIBOIxX4fV5KPvGdOXgLQXjArNVIB
[...]
            =Y30R
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-12-13T17:59:05Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/YX9jdrRjEPmwPcJT+IGqk4IIezWvwCOWm9MWTQvSr/RP
[...]
            Gw6BYXhwfDHq07l7J9k8ZVP1Ddc5rnU01eQg4vLYpQ==
            =DolM
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-12-13T17:59:05Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf+Pu51+sJfh28KWDrnTSJmRfrvKGIkc8m3+kqGXC0GM+r0
[...]
            deiuSc5Svaox+Hqm5CZo9bdUGZp+hu1ZQuTxMj4SFg==
            =KLJm
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
